--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,16 @@
 .App {
-  text-align: center;
+  height: 100vh;
+  width: 100vw;
+  background-color: bisque;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.Chessboard {
+  display: flex;
+  height: 40%;
+  width: 40%;
 }
 
 .App-logo {
